# agentic-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
building-blocks/: .env.example  1_intelligence.py  mymodel.py
building-blocks/responses/: 1_intelligence.md
